--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@shopify/flash-list": "1.6.4",
+    "@types/react-redux": "^7.1.33",
+    "babel-preset-expo": "~11.0.0",
     "expo": "~51.0.24",
+    "expo-camera": "~15.0.14",
+    "expo-image": "~1.12.13",
+    "expo-media-library": "~16.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.3",
+    "typescript": "^5.5.4"
   },
   "private": true
 }
